seo shared layout with meta

--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -1,5 +1,6 @@
 {
   "home": "Home",
+  "meta": "Portfolio - Piotr Szczypka, frontend developer.",
   "about": "O mnie",
   "projects": "Projekty",
   "title": "Randomowa strona"
