responsive menu, context menu, animation, translation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
-    "home": "Home",
-    "about": "About",
-    "projects": "Projects",
+    "Home": "Home",
+    "About": "About",
+    "Projects": "Projects",
+    "Contact": "Contact",
     "title": "Random WebPage"
 }
