--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,4 +1,6 @@
 {
   "title": "Hi, I'm Piotr",
-  "description": "The personal website"
+  "description": "The personal website",
+  "webDevelopment": "Web Development",
+  "application": "Application"
 }
