--- a/public/locales/pl/home.json
+++ b/public/locales/pl/home.json
@@ -1,4 +1,5 @@
 {
   "title": "Cześć, jestem Piotrek!",
-  "description": "The personal website o mnie"
+  "description": "The personal website o mnie",
+  "application": "Aplikacje"
 }
