add detect device, fixed pdf download

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,5 +6,6 @@
     "title": "Random WebPage",
     "mailWelcome": "Hi !",
     "mailTitle": "Have I intrested you ?",
-    "mailSubtitle": "Please contact me !"
+    "mailSubtitle": "Please contact me !",
+    "cvText": "Here is my CV"
 }
