--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -7,5 +7,6 @@
   "title": "Randomowa strona",
   "mailWelcome": "Cześć !",
   "mailTitle": "Zainteresowałem Cię ?",
-  "mailSubtitle": "Skontaktuj się ze mną !"
+  "mailSubtitle": "Skontaktuj się ze mną !",
+  "cvText": "Tu znajdziesz moje CV"
 }
