--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -8,5 +8,7 @@
   "mailWelcome": "Cześć !",
   "mailTitle": "Zainteresowałem Cię ?",
   "mailSubtitle": "Skontaktuj się ze mną !",
-  "cvText": "Tu znajdziesz moje CV"
+  "cvText": "Tu znajdziesz moje CV",
+  "readMore": "Czytaj więcej",
+  "back": "wróć"
 }
