--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -10,5 +10,7 @@
   "mailSubtitle": "Skontaktuj się ze mną !",
   "cvText": "Tu znajdziesz moje CV",
   "readMore": "Czytaj więcej",
-  "back": "wróć"
+  "back": "wróć",
+  "introduce": "Cześć, tu Piotrek! Pochodzę z Kasinki Małej, pomieszkuje w Krakowie. \n Kreatywny gość, z poczuciem humoru. Kładę ogromny nacisk na \n samorozwój i zadowolenie klienta.",
+
 }
