--- a/public/locales/pl/home.json
+++ b/public/locales/pl/home.json
@@ -1,5 +1,6 @@
 {
-  "title": "Cześć, jestem Piotrek!",
+  "quote": "Życie jest jak jazda na rowerze. Żeby utrzymać równowagę, musisz być w ciągłym ruchu",
   "description": "The personal website o mnie",
-  "application": "Aplikacje"
+  "application": "Aplikacje",
+  "introduce": "Cześć, tu Piotrek! Pochodzę z Kasinki Małej, pomieszkuje w Krakowie. \n Kreatywny gość, z poczuciem humoru. Kładę ogromny nacisk na \n samorozwój i zadowolenie klienta."
 }
