add new layout, edit smooth scroll, add new animations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,7 @@
     "Projects": "Projects",
     "Contact": "Contact",
     "title": "Random WebPage",
+    "download": "Resume",
     "mailWelcome": "Hi !",
     "mailTitle": "Have I intrested you ?",
     "mailSubtitle": "Please contact me !",
