--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -3,6 +3,7 @@
   "meta": "Portfolio - Piotr Szczypka, frontend developer.",
   "About": "O mnie",
   "Projects": "Projekty",
+  "download": "Resume",
   "Contact": "Kontakt",
   "title": "Randomowa strona",
   "mailWelcome": "Cześć !",
