add tailwindcss, remove styled components, update npm dependencies

--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -3,7 +3,7 @@
   "meta": "Portfolio - Piotr Szczypka, frontend developer.",
   "About": "O mnie",
   "Projects": "Projekty",
-  "download": "Resume",
+  "download": "Cv",
   "Contact": "Kontakt",
   "title": "Randomowa strona",
   "mailWelcome": "Cześć !",
@@ -12,6 +12,6 @@
   "cvText": "Tu znajdziesz moje CV",
   "readMore": "Czytaj więcej",
   "back": "wróć",
-  "introduce": "Cześć, tu Piotrek! Pochodzę z Kasinki Małej, pomieszkuje w Krakowie. \n Kreatywny gość, z poczuciem humoru. Kładę ogromny nacisk na \n samorozwój i zadowolenie klienta.",
+  "introduce": "Cześć, tu Piotrek! Pochodzę z Kasinki Małej, pomieszkuje w Krakowie. Kreatywny gość, z poczuciem humoru. Kładę ogromny nacisk nasamorozwój i zadowolenie klienta."
 
 }
